# TRUSTLINK

./: .gitignore  LICENSE  README.md
.claude/plan/: project-name-suggestion.md  trustlink-repo-plan.md
.github/workflows/: ci.yml
app/: .env.example  package-lock.json  package.json  tailwind.config.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/disputes/: page.tsx
app/src/app/escrow/: page.tsx
app/src/app/reputation/: page.tsx
app/src/components/: CreateEscrowForm.tsx  EscrowCard.tsx  MilestoneList.tsx  Navbar.tsx  StatusBadge.tsx  WalletConnect.tsx
app/src/lib/: api.ts  contracts.ts  freighter.ts
app/src/types/: index.ts
contracts/trustlink/: Cargo.toml
contracts/trustlink/src/: lib.rs  test.rs
contracts/trustlink/test_snapshots/test/: test_approve_and_release_milestone.1.json  test_approve_milestone_twice_fails.1.json  test_create_escrow_success.1.json  test_events_emitted.1.json  test_fund_escrow_not_found.1.json  test_fund_escrow_success.1.json  test_raise_and_resolve_dispute_for_client.1.json  test_raise_and_resolve_dispute_for_freelancer.1.json  test_refund_after_expiry.1.json  test_reputation_after_completion.1.json  test_submit_evidence.1.json  (+1 more)
indexer/: .env.example  Cargo.toml
indexer/migrations/: 0001_create_escrows.sql  0002_create_disputes.sql  0003_create_reputation.sql  0004_create_indexer_cursors.sql
indexer/src/: config.rs  db.rs  lib.rs  main.rs  poller.rs  ws.rs
indexer/src/api/: disputes.rs  escrows.rs  mod.rs  reputation.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  types.ts
(+2 files in other folders)
